syntax = "proto3";

option csharp_namespace = "ItemService";

package item;

service ItemService {
  rpc CreateItem (CreateItemRequest) returns (ItemResponse);
  rpc GetItem (GetItemRequest) returns (ItemResponse);
  rpc UpdateItem (UpdateItemRequest) returns (ItemResponse);
  rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse);
  rpc ListItems (ListItemsRequest) returns (ListItemsResponse);
}

message CreateItemRequest {
  string name = 1;
  string description = 2;
  double price = 3;
}

message GetItemRequest {
  int32 id = 1;
}

message UpdateItemRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message DeleteItemRequest {
  int32 id = 1;
}

message DeleteItemResponse {
  bool success = 1;
}

message ItemResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message ListItemsRequest {
}

message ListItemsResponse {
  repeated ItemResponse items = 1;
}